# risco-diabetes-fairness

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml  docs.yml  mkdocs.yml  pre-commit.yml  release.yml  reproducibility.yml  tests.yml
app/: app.py
configs/: config.yaml  deploy.yaml  logging.yaml  model_params.yaml  paths.yaml
docs/: index.md  referencia.md
docs/guias/: arquitetura.md  uso.md
notebooks/: 01_eda.ipynb  02_modeling.ipynb
reports/datasheets/: datasheet.md
reports/model_cards/: model_card.md
src/: main.py
src/config/: __init__.py  environment.py  logging.py  paths.py  settings.py
src/constants/: __init__.py  columns.py  labels.py  metrics.py
src/data/: __init__.py  loader.py  splitter.py  writer.py
src/evaluation/: __init__.py  calibration.py  evaluator.py
src/exceptions/: __init__.py  base.py  configuration.py  data.py  model.py
src/explainability/: __init__.py  shap_explainer.py
src/fairness/: __init__.py  audit.py
src/features/: __init__.py  engineering.py
src/metrics/: __init__.py  classification.py
src/models/: __init__.py  factory.py  persistence.py
src/pipelines/: __init__.py  evaluation.py  fairness.py  preprocessing.py  training.py
src/preprocessing/: __init__.py  pipeline.py
src/schemas/: __init__.py  dataset.py
src/utils/: __init__.py  hashing.py  io.py  numbers.py  seed.py
src/visualization/: __init__.py  plots.py  theme.py
tests/: conftest.py  test_calibration.py  test_config.py  test_evaluator.py  test_factory.py  test_fairness_audit.py  test_features.py  test_loader_writer.py  test_metrics.py  test_model_behavior.py  test_persistence.py  test_pipelines.py  test_preprocessing.py  test_schemas.py  test_shap_explainer.py  test_splitter.py  test_utils.py  test_visualization.py
